--- a/css_file/style-2.css
+++ b/css_file/style-2.css
@@ -1,6 +1,7 @@
 * {
   margin-top: 0;
   margin-bottom: 0;
+  box-sizing: border-box;
 }
 
 .h2 {
@@ -19,34 +20,51 @@ h2 {
   text-transform: uppercase;
 }
 
-/* 
-h2::after {
-  content: "sale";
-  position: absolute;
-  text-transform: uppercase;
-  background-color: red;
-  font-size: 16px;
-  left: 0;
-} */
-
 a:hover {
   color: #777;
   text-decoration: underline;
 }
 
-footer:hover {
-  background-color: white;
-  color: black;
+.product-img {
+  float: left;
 }
 
 .product {
   border: 4px solid black;
-  width: 825px;
-  margin-left: auto;
-  margin-right: auto;
+  width: 850px;
+  margin: auto;
   margin-top: 20px;
   position: relative;
+  clear: both;
 }
+
+.product-info {
+  width: 243px;
+  margin-left: 40px;
+  margin-right: 40px;
+  background-color: yellow;
+  float: left;
+}
+
+.product-details {
+  width: 243px;
+  background-color: blue;
+  float: left;
+}
+
+/* .product-info {
+  background-color: yellow;
+  width: 243px;
+  float: left;
+  margin-left: 40px;
+  margin-right: 40px;
+} */
+
+/* .product-details {
+  background-color: blue;
+  width: 243px;
+  float: left;
+} */
 
 .product::after {
   content: "sale";
@@ -62,15 +80,26 @@ footer:hover {
   color: white;
   font-weight: bold;
 }
+
 .shipping {
   font-size: 12px;
+  padding-bottom: 20px;
   text-transform: uppercase;
   font-weight: bold;
   color: #777;
+  float: right;
+  float: right;
 }
 
 .ready {
   font-size: 24px;
+  padding-bottom: 20px;
+  clear: both;
+}
+
+.price {
+  padding-bottom: 20px;
+  float: left;
 }
 
 .more-info {
@@ -78,15 +107,24 @@ footer:hover {
   color: black;
 }
 
-.button {
-  border-top: 4px solid black;
-  color: white;
-  background-color: black;
+.footer {
+  width: 100px;
   text-align: center;
 }
+/* .footer {
+  border: none;
+  color: white;
+  background-color: black;
+  font-size: 20px;
+  cursor: pointer;
+  padding: 15px;
+  width: 100%;
+  display: inline-block;
+} */
 
-.padding {
-  padding-bottom: 20px;
+footer:hover {
+  background-color: white;
+  color: black;
 }
 
 .list-padding {
@@ -102,16 +140,15 @@ footer:hover {
   padding-bottom: 20px;
 }
 
-.container-1 {
+.container {
   display: flex;
   flex-direction: row;
 }
-
 .box {
-  height: 50px;
-  width: 50px;
+  height: 22px;
+  width: 22px;
   margin-left: 20px;
-  margin-right: 20px;
+  margin-top: 20px;
   margin-bottom: 20px;
 }
 
