--- a/css_file/style-layout.css
+++ b/css_file/style-layout.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 body {
@@ -10,9 +11,8 @@ body {
 }
 
 .container {
-  width: 800px;
-  margin-right: auto;
-  margin-left: auto;
+  width: 1200px;
+  margin: auto;
 }
 
 .main-header {
@@ -21,15 +21,33 @@ body {
   margin-bottom: 50px;
 }
 
+h2 {
+  position: relative;
+}
+
+h2::after {
+  content: "TOP";
+  letter-spacing: 2px;
+  font-size: 16px;
+  font-weight: bold;
+  padding: 5px 10px;
+  background-color: #ffe70e;
+  color: #444;
+  position: absolute;
+  top: -10px;
+  right: -25px;
+  display: inline-block;
+}
+
 post-header {
   margin-bottom: 40px;
 }
 
 aside {
   background-color: #f7f7f7;
-  border: 5px solid #1098ad;
-  padding: 50px 0;
-  width: 500px;
+  border-top: 5px solid #1098ad;
+  border-bottom: 5px solid #1098ad;
+  padding: 50px 40px;
 }
 
 nav a {
@@ -49,6 +67,7 @@ h1 {
 
 h2 {
   font-size: 40px;
+  margin-bottom: 20px;
 }
 
 h3 {
@@ -61,6 +80,7 @@ h4 {
   font-size: 20px;
   text-transform: uppercase;
   text-align: center;
+  margin-bottom: 30px;
 }
 
 p {
@@ -68,6 +88,7 @@ p {
   line-height: 1.5;
   margin-bottom: 15px;
 }
+
 ul,
 ol {
   margin-left: 50px;
@@ -86,6 +107,9 @@ footer p {
 .author {
   font-style: italic;
   font-size: 18px;
+  float: left;
+  margin-left: 20px;
+  padding-top: 10px;
 }
 
 .related-author {
@@ -95,6 +119,7 @@ footer p {
 
 .ul {
   list-style: none;
+  margin-left: 0;
 }
 
 li:first-child {
@@ -119,10 +144,47 @@ a:hover {
 .post-image {
   width: 100%;
   height: auto;
+  margin-top: 20px;
 }
 
 nav a:link {
   margin-top: 10px;
   margin-right: 30px;
   display: inline-block;
+}
+
+.autor-img {
+  float: left;
+}
+
+h1 {
+  float: left;
+}
+
+nav {
+  float: right;
+}
+
+.clear {
+  clear: both;
+}
+
+.clear-fix:after {
+  clear: both;
+  content: "";
+  display: block;
+}
+
+article {
+  width: 825px;
+  float: left;
+}
+
+aside {
+  width: 300px;
+  float: right;
+}
+
+footer {
+  clear: both;
 }
