--- a/css_file/style-2.css
+++ b/css_file/style-2.css
@@ -4,158 +4,92 @@
   box-sizing: border-box;
 }
 
-.h2 {
-  padding: 20px;
-}
-
 body {
   font-family: sans-serif;
   line-height: 1.4;
 }
 
-h2 {
-  text-align: center;
-  background-color: #f7f7f7;
-  font-size: 22px;
-  text-transform: uppercase;
-}
-
-a:hover {
-  color: #777;
-  text-decoration: underline;
-}
-
-.product-img {
-  float: left;
-}
-
-.product {
-  border: 4px solid black;
-  width: 850px;
-  margin: auto;
-  margin-top: 20px;
-  position: relative;
-  clear: both;
-}
-
-.product-info {
-  width: 243px;
-  margin-left: 40px;
-  margin-right: 40px;
-  background-color: yellow;
-  float: left;
-}
-
-.product-details {
-  width: 243px;
-  background-color: blue;
-  float: left;
-}
-
-/* .product-info {
-  background-color: yellow;
-  width: 243px;
-  float: left;
-  margin-left: 40px;
-  margin-right: 40px;
-} */
-
-/* .product-details {
-  background-color: blue;
-  width: 243px;
-  float: left;
-} */
-
-.product::after {
+.product-title::after {
   content: "sale";
   letter-spacing: 2px;
   position: absolute;
   text-transform: uppercase;
   background-color: #ec2f2f;
   font-size: 16px;
-  left: -35px;
-  top: -17px;
-  display: inline-block;
+  left: -37px;
+  top: -20px;
   padding: 7px 15px;
   color: white;
   font-weight: bold;
 }
 
-.shipping {
-  font-size: 12px;
-  padding-bottom: 20px;
-  text-transform: uppercase;
-  font-weight: bold;
+a:hover {
   color: #777;
-  float: right;
-  float: right;
+  text-decoration: underline;
+}
+.product-title {
+  text-align: center;
+  background-color: #f7f7f7;
+  font-size: 22px;
+  text-transform: uppercase;
+  padding: 20px;
+  position: relative;
+  font-weight: bold;
+  grid-column: 1/-1;
 }
 
-.ready {
-  font-size: 24px;
-  padding-bottom: 20px;
-  clear: both;
+.product {
+  border: 4px solid black;
+  width: 825px;
+  margin: 50px auto;
+  display: grid;
+  grid-template-columns: 250px 1fr 1fr;
+  column-gap: 40px;
+}
+
+.product-info {
+  flex: 1;
+}
+
+.product-row {
+  justify-content: space-between;
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+  margin-top: 20px;
 }
 
 .price {
-  padding-bottom: 20px;
-  float: left;
+  font-size: 20px;
+}
+
+.shipping {
+  font-size: 12px;
+  text-transform: uppercase;
+  font-weight: bold;
+  color: #777;
+}
+
+.ready {
+  font-size: 18px;
+  margin-bottom: 10px;
 }
 
 .more-info {
   text-decoration: none;
   color: black;
-}
-
-.footer {
-  width: 100px;
-  text-align: center;
-}
-/* .footer {
-  border: none;
-  color: white;
-  background-color: black;
-  font-size: 20px;
-  cursor: pointer;
-  padding: 15px;
-  width: 100%;
-  display: inline-block;
-} */
-
-footer:hover {
-  background-color: white;
-  color: black;
-}
-
-.list-padding {
-  padding-bottom: 10px;
-}
-
-.ul-padding {
-  padding-left: 20px;
-}
-
-.padding-h3 {
-  padding-top: 20px;
-  padding-bottom: 20px;
-}
-
-.container {
-  display: flex;
-  flex-direction: row;
-}
-.box {
-  height: 22px;
-  width: 22px;
-  margin-left: 20px;
-  margin-top: 20px;
   margin-bottom: 20px;
+  display: inline-block;
+}
+.colors {
+  display: flex;
+  justify-content: space-between;
 }
 
-.box:first-child {
-  margin-left: 0;
+.box {
+  width: 22px;
+  height: 22px;
 }
-
 .box-1 {
   background-color: black;
 }
@@ -178,4 +112,39 @@ footer:hover {
 
 .box-6 {
   background-color: brown;
+}
+
+.product-details {
+  flex: 1;
+  min-height: 0;
+}
+
+.h3 {
+  text-transform: uppercase;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.product-list {
+  margin-left: -20px;
+}
+
+.list-info {
+  margin-bottom: 10px;
+  font-size: 20px;
+}
+
+.list-info:last-child {
+  margin: 0;
+}
+.footer {
+  color: white;
+  background-color: black;
+  text-align: center;
+  grid-column: -4/-1;
+}
+
+.footer:hover {
+  background-color: white;
+  color: black;
 }
