--- a/css_file/style-layout.css
+++ b/css_file/style-layout.css
@@ -10,17 +10,6 @@ body {
   border-top: 5px solid #1098ad;
 }
 
-.container {
-  width: 1200px;
-  margin: auto;
-}
-
-.main-header {
-  background-color: #f7f7f7;
-  padding: 20px 40px;
-  margin-bottom: 50px;
-}
-
 h2 {
   position: relative;
 }
@@ -39,17 +28,18 @@ h2::after {
   display: inline-block;
 }
 
-post-header {
-  margin-bottom: 40px;
-}
-
 aside {
   background-color: #f7f7f7;
   border-top: 5px solid #1098ad;
   border-bottom: 5px solid #1098ad;
   padding: 50px 40px;
+  flex: 0 0 300px;
 }
 
+article {
+  margin-bottom: 0;
+  flex: 1;
+}
 nav a {
   font-size: 18px;
 }
@@ -67,7 +57,7 @@ h1 {
 
 h2 {
   font-size: 40px;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 }
 
 h3 {
@@ -104,30 +94,13 @@ footer p {
   font-size: 16px;
 }
 
-.author {
-  font-style: italic;
-  font-size: 18px;
-  float: left;
-  margin-left: 20px;
-  padding-top: 10px;
-}
-
-.related-author {
-  font-size: 18px;
-  font-weight: bold;
-}
-
-.ul {
-  list-style: none;
-  margin-left: 0;
-}
-
 li:first-child {
   font-weight: bold;
 }
 
 li:last-child {
   font-style: italic;
+  margin-bottom: 0;
 }
 
 a {
@@ -141,50 +114,100 @@ a:hover {
   text-decoration: underline;
 }
 
+nav a:link {
+  /* margin-top: 10px; */
+  margin-right: 30px;
+  display: inline-block;
+}
+
+nav a:link:last-child {
+  margin-right: 0;
+}
+
+.post-header {
+  margin-bottom: 40px;
+}
+
+.container {
+  width: 1200px;
+  margin: auto;
+}
+
+.main-header {
+  background-color: #f7f7f7;
+  padding: 20px;
+  /* margin-bottom: 50px; */
+}
+
 .post-image {
   width: 100%;
   height: auto;
   margin-top: 20px;
 }
 
-nav a:link {
-  margin-top: 10px;
-  margin-right: 30px;
-  display: inline-block;
+.author {
+  font-style: italic;
+  font-size: 18px;
+  margin-left: 15px;
+  margin-bottom: 0;
 }
 
-.autor-img {
-  float: left;
+.related-author {
+  font-weight: normal;
+  font-size: 14px;
+  font-style: italic;
+  margin-bottom: 0;
 }
 
-h1 {
-  float: left;
+.main-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
-nav {
-  float: right;
+.author-box {
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
 }
 
-.clear {
-  clear: both;
+.related-post {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 30px;
 }
 
-.clear-fix:after {
-  clear: both;
-  content: "";
+.related-link:link {
+  font-size: 17px;
+  font-weight: bold;
+  font-style: normal;
+  margin-bottom: 5px;
   display: block;
 }
 
-article {
-  width: 825px;
-  float: left;
+/* .row {
+  display: flex;
+  align-items: flex-start;
+  gap: 75px;
+  margin-bottom: 60px;
+}
+.related {
+  list-style: none;
+  margin-left: 0;
+} */
+.container {
+  display: grid;
+  grid-template-columns: 1fr 300px;
+  column-gap: 75px;
+  row-gap: 60px;
+  align-items: start;
 }
 
-aside {
-  width: 300px;
-  float: right;
+.main-header {
+  grid-column: 1/-1;
 }
 
 footer {
-  clear: both;
+  grid-column: 1/-1;
 }
